<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:id="@+id/linsettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"

        >
        <Button
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/toppic"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/settting"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="放电工具"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:onClick="Description"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="内存信息"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_weight="0.5"
        android:paddingLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/choice"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textView"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:padding="2dp"
        >
        <Button
            android:id="@+id/choiceButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="填充方式切换按钮"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_below="@+id/choice"
        >
        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_weight="0.04"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20dp"
            android:text="@string/display" />
        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="60dp"
            android:text="100"
            android:ems="5"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="15dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/line1"
        android:layout_marginHorizontal="20dp"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="59dp"

            android:layout_weight="1"
            android:text="@string/begin" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/line2"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@+id/progress_bar"
        >
    </LinearLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:text="龙旗软件测试六组设计\n\n2017.11"
        android:layout_below="@+id/progress_bar"
        android:layout_alignParentStart="true" />
</RelativeLayout>