<resources>
    <string name="app_name">Design By LongCheer</string>
    <string name="begin">执行</string>
    <string name="cancel">暂停</string>
    <string name="delete">删除</string>
    <string name="toppic">内存填充工具</string>
    <string name="percentage">所占百分比例%</string>
    <string name="runMemory">运行内存</string>
    <string name="Description">
        1、内存填充为100%或内存剩余量极低时，可能导致本程序报错，纯属正常情况，因为Android系统自带的很多apk也会出现这个问题\n
...
